Trocando para funcionar com streams
